--- a/index.html
+++ b/index.html
@@ -22,58 +22,90 @@
         const canvasEl = document.querySelector("canvas"),
             canvasCtx = canvasEl.getContext("2d")
 
+        const gapX = 10
+
+        const field = {
+            w: window.innerWidth,
+            h: window.innerHeight,
+            draw: function () {
+                canvasCtx.fillStyle = "#286047"
+                canvasCtx.fillRect(0, 0, this.w, this.h)
+            },
+        }
+
+        const line = {
+            w: 15,
+            h: field.h,
+            draw: function () {
+                canvasCtx.fillStyle = "#ffffff"
+                canvasCtx.fillRect(field.w / 2 - this.w / 2, 0, this.w, this.h)
+            },
+        }
+
+        const leftPaddle = {
+            x: gapX,
+            y: 100,
+            w: line.w,
+            h: 200,
+            draw: function () {
+                canvasCtx.fillStyle = "#ffffff"
+                canvasCtx.fillRect(this.x, this.y, this.w, this.h)
+            },
+        }
+
+        const hightPaddle = {
+            x: field.w - line.w - gapX,
+            y: 200,
+            w: line.w,
+            h: 200,
+            draw: function () {
+                canvasCtx.fillStyle = "#ffffff"
+                canvasCtx.fillRect(this.x, this.y, this.w, this.h)
+            },
+        }
+
+        const score = {
+            human: 1,
+            computer: 2,
+            draw: function () {
+                canvasCtx.font = "bold 72px Arial"
+                canvasCtx.textAlign = "center"
+                canvasCtx.textBaseline = "top"
+                canvasCtx.fillStyle = "#01341D"
+                canvasCtx.fillText(this.human, field.w / 4, 50)
+                canvasCtx.fillText(this.computer, field.w / 4 + field.w / 2, 50)
+            },
+        }
+
+        const ball = {
+            x: 300,
+            y: 200,
+            r: 20,
+            draw: function () {
+                canvasCtx.fillStyle = "#ffffff"
+                canvasCtx.beginPath()
+                canvasCtx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false)
+                canvasCtx.fill()
+            },
+        }
+
         function setup() {
             canvasEl.width = canvasCtx.width = window.innerWidth
             canvasEl.height = canvasCtx.height = window.innerHeight
         }
 
         function draw() {
-            canvasCtx.fillStyle = "#286047"
-            canvasCtx.fillRect(0, 0, window.innerWidth, window.innerHeight)
+            field.draw()
+            line.draw()
 
-            const linewidth = 15
-            canvasCtx.fillStyle = "#fff"
+            leftPaddle.draw()
+            hightPaddle.draw()
 
-            canvasCtx.fillRect(
-                window.innerWidth / 2 - linewidth / 2,
-                0,
-                linewidth,
-                window.innerHeight
-            )
+            score.draw()
 
-            //raquete esquerda
+            ball.draw()
 
-            canvasCtx.fillRect(
-                10,
-                400,
-                linewidth,
-                200,
-            )
 
-            //raquete direita
-
-            canvasCtx.fillRect(
-                window.innerWidth - linewidth - 10,
-                100,
-                linewidth,
-                200,
-            )
-
-            //bola
-
-            canvasCtx.beginPath()
-            canvasCtx.arc(200, 200, 20, 0, 2 * Math.PI, false)
-            canvasCtx.fill()
-
-            //placar
-
-            canvasCtx.font = "bold 72px Arial"
-            canvasCtx.textAlign = "center"
-            canvasCtx.textBaseline = "top"
-            canvasCtx.fillStyle = "#01341D"
-            canvasCtx.fillText("3", window.innerWidth / 4, 50)
-            canvasCtx.fillText("2", window.innerWidth / 4 + window.innerWidth / 2, 50
-            )
 
         }
 
