--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 
 <body>
     <canvas>
-
     </canvas>
     <script>
         const canvasEl = document.querySelector("canvas"),
             canvasCtx = canvasEl.getContext("2d")
 
         const gapX = 10
+
+        const mouse = { x: 0, y: 0 }
 
         const field = {
             w: window.innerWidth,
@@ -47,9 +48,14 @@
             y: 100,
             w: line.w,
             h: 200,
+            _move: function(){
+                this.y = mouse.y - this.h / 2
+            },
             draw: function () {
                 canvasCtx.fillStyle = "#ffffff"
                 canvasCtx.fillRect(this.x, this.y, this.w, this.h)
+
+                this._move()
             },
         }
 
@@ -58,9 +64,14 @@
             y: 200,
             w: line.w,
             h: 200,
+            _move: function(){
+                this.y = ball.y
+            },
             draw: function () {
                 canvasCtx.fillStyle = "#ffffff"
                 canvasCtx.fillRect(this.x, this.y, this.w, this.h)
+
+                this._move()
             },
         }
 
@@ -81,11 +92,18 @@
             x: 300,
             y: 200,
             r: 20,
+            speed: 5,
+            _move: function () {
+                this.x += 1 * this.speed
+                this.y += 1 * this.speed
+            },
             draw: function () {
                 canvasCtx.fillStyle = "#ffffff"
                 canvasCtx.beginPath()
                 canvasCtx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false)
                 canvasCtx.fill()
+
+                this._move()
             },
         }
 
@@ -104,13 +122,36 @@
             score.draw()
 
             ball.draw()
-
-
-
         }
 
         setup()
         draw()
+
+        window.animateFrame = (function () {
+            return (
+                window.requestAnimationFrame ||
+                window.webkitRequestAnimationFrame ||
+                window.mozRequestAnimationFrame ||
+                window.oRequestAnimationFrame ||
+                window.msRequestAnimationFrame ||
+                function (callback) {
+                    return window.setTimeout(callback, 1000 / 60);
+                }
+            );
+        })();
+
+        function main() {
+            animateFrame(main)
+            draw()
+        }
+
+        setup()
+        main()
+
+        canvasEl.addEventListener('mousemove', function (e) {
+            mouse.x = e.pageX 
+            mouse.y = e.pageY 
+        })
 
     </script>
 
