--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             y: 100,
             w: line.w,
             h: 200,
-            _move: function(){
+            _move: function () {
                 this.y = mouse.y - this.h / 2
             },
             draw: function () {
@@ -59,14 +59,23 @@
             },
         }
 
-        const hightPaddle = {
+        const rightPaddle = {
             x: field.w - line.w - gapX,
-            y: 200,
+            y: 0,
             w: line.w,
             h: 200,
-            _move: function(){
-                this.y = ball.y
+            speed:5,
+            _move: function () {
+                if (this.y + this.h / 2 < ball.y + ball.r) {
+                    this.y += this.speed
+                } else {
+                    this.y -= this.speed
+                }
             },
+            speedUp: function () {
+                this.speed += 2
+            }, 
+
             draw: function () {
                 canvasCtx.fillStyle = "#ffffff"
                 canvasCtx.fillRect(this.x, this.y, this.w, this.h)
@@ -76,8 +85,14 @@
         }
 
         const score = {
-            human: 1,
-            computer: 2,
+            human: 0,
+            computer: 0,
+            increaseHuman: function () {
+                this.human++
+            },
+            increaseComputer: function () {
+                this.computer++
+            },
             draw: function () {
                 canvasCtx.font = "bold 72px Arial"
                 canvasCtx.textAlign = "center"
@@ -89,13 +104,60 @@
         }
 
         const ball = {
-            x: 300,
-            y: 200,
+            x: 0,
+            y: 0,
             r: 20,
-            speed: 5,
+            speed: 2,
+            directionX: 1,
+            directionY: 1,
+            _calcPosition: function () {
+
+                if (this.x > field.w - this.r - rightPaddle.w - gapX) {
+                    if (this.y + this.r > rightPaddle.y && this.y - this.r < rightPaddle.y + rightPaddle.h) {
+                        this._reverseX()
+                    } else {
+                        score.increaseHuman()
+                        this._pointUp()
+                    }
+                }
+
+                if (this.x < this.r + leftPaddle.w + gapX) {
+                    if (this.y + this.r > leftPaddle.y &&
+                        this.y - this.r < leftPaddle.y + leftPaddle.h
+                    ){
+                        this._reverseX()
+                    } else {
+                        score.increaseComputer()
+                        this._pointUp()
+                    }
+                }
+
+                if (
+                    (this.y - this.r < 0 && this.directionY < 0) ||
+                    (this.y > field.h - this.r && this.directionY > 0)
+                ) {
+                    this._reverseY()
+                }
+            },
+            _reverseX: function () {
+                this.directionX *= -1
+            },
+            _reverseY: function () {
+                this.directionY *= -1
+            },
+            _speedUp: function () {
+                this.speed += 2
+            },
+            _pointUp: function () {
+                this._speedUp()
+                rightPaddle.speedUp()
+
+                this.x = field.w / 2
+                this.y = field.h / 2
+            },
             _move: function () {
-                this.x += 1 * this.speed
-                this.y += 1 * this.speed
+                this.x += this.directionX * this.speed
+                this.y += this.directionY * this.speed
             },
             draw: function () {
                 canvasCtx.fillStyle = "#ffffff"
@@ -103,6 +165,7 @@
                 canvasCtx.arc(this.x, this.y, this.r, 0, 2 * Math.PI, false)
                 canvasCtx.fill()
 
+                this._calcPosition()
                 this._move()
             },
         }
@@ -117,7 +180,7 @@
             line.draw()
 
             leftPaddle.draw()
-            hightPaddle.draw()
+            rightPaddle.draw()
 
             score.draw()
 
@@ -149,8 +212,8 @@
         main()
 
         canvasEl.addEventListener('mousemove', function (e) {
-            mouse.x = e.pageX 
-            mouse.y = e.pageY 
+            mouse.x = e.pageX
+            mouse.y = e.pageY
         })
 
     </script>
